# CompMath_lb2

./: CMakeLists.txt
src/: main.c
src/algorithm/: exact_sum.c  exact_sum.h  kahan_babushka_klein_sum.c  kahan_babushka_klein_sum.h  kahan_sum.c  kahan_sum.h  naive_sum.c  naive_sum.h  ogita_oishi_sum.c  ogita_oishi_sum.h
src/generator/: generator.c
src/io/: io.c  io.h
